alignment issue fixed

--- a/css/revision.css
+++ b/css/revision.css
@@ -352,8 +352,6 @@ padding: 15px 50px;
 .slick-dots li button {
   height: 21px !important;
   width: 21px !important;
-  border: 3px !important;
-
   border-radius: 50% !important;
   color: transparent !important;
   background-color: transparent !important;
@@ -370,6 +368,7 @@ padding: 15px 50px;
 } */
 .slick-dots li.slick-active button {
   border-color: #27ad60 !important;
+  background-color: #27ad60 !important;
 }
 
 @media(max-width:768px){
@@ -419,7 +418,7 @@ padding: 15px 50px;
   justify-content: center;
   /* margin-left: 250px; */
   /* max-width: 730px; */
-  padding: 80px 0;
+  padding: 90px 25px;
   position: relative;
   width: 100%;
   z-index: 1;
